--- a/Front/src/app/clubaccueil/clubaccueil.component.scss
+++ b/Front/src/app/clubaccueil/clubaccueil.component.scss
@@ -659,4 +659,10 @@
     
     }
   
-  
+
+  .join-button:disabled,
+  .join-button[disabled] {
+    background-color: #cccccc;
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
