--- a/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-collapse/nav-collapse.component.html
+++ b/Front/src/app/theme/layouts/admin-layout/navigation/nav-content/nav-collapse/nav-collapse.component.html
@@ -1,14 +1,31 @@
-<li data-username="mantis dashboard" class="nav-item coded-hasmenu" [routerLinkActive]="['active']">
-  <a [routerLinkActive]="['active']" (click)="navCollapse($event)">
+<li
+  data-username="mantis dashboard"
+  class="nav-item coded-hasmenu"
+  [class.coded-trigger]="isOpen"
+  [routerLinkActive]="['active']"
+>
+  <a href="#" (click)="navCollapse($event)">
     <span *ngIf="item.icon" class="coded-micon">
       <i antIcon [type]="item.icon" theme="outline"></i>
     </span>
     <span class="coded-mtext">{{ item.title }}</span>
   </a>
-  <ul class="coded-submenu" [routerLinkActive]="['active']" [ngClass]="item.classes!">
+
+  <ul
+    class="coded-submenu"
+    [@slideInOut]="isOpen ? 'in' : 'out'"
+    *ngIf="isOpen"
+    [ngClass]="item.classes!"
+  >
     <ng-container *ngFor="let subItem of item.children">
-      <app-nav-item *ngIf="subItem.type === 'item'" [item]="subItem"></app-nav-item>
-      <app-nav-collapse *ngIf="subItem.type === 'collapse'" [item]="subItem"></app-nav-collapse>
+      <app-nav-item
+        *ngIf="subItem.type === 'item'"
+        [item]="subItem"
+      ></app-nav-item>
+      <app-nav-collapse
+        *ngIf="subItem.type === 'collapse'"
+        [item]="subItem"
+      ></app-nav-collapse>
     </ng-container>
   </ul>
 </li>
